cmake_minimum_required(VERSION 3.13)

project("Ejemplo")

add_executable(array arrays.cc)
add_executable(array2 array2.cc)
add_executable(copia copia.cc)
add_executable(multidimensional multidimensional.cc)
add_executable(matrix-vector matrix-vector.cc)
add_executable(static_assert static_assert.cc)
add_executable(template_size template_size.cc)
add_executable(punteros punteros.cc)
add_executable(punteros2 punteros2.cc)
add_executable(valgrind valgrind.c)
add_executable(array_std array_std.cc)